3.7.1.0/TRANSLATION_STATUS.zh-TW.md
# 翻譯狀態 (3.7.1.0)

> 🌐 [English](TRANSLATION_STATUS.md) | **繁體中文**

原地重算：本版現有譯文皆予保留，仍標記為 `untranslated` 的字串維持原狀（補譯前先顯示英文）。

- 字串總數（兩專案合計）: 473
- 產生時間: 2026-07-13 23:42:51 +08:00

快速跳轉: [es-ES](#es-es) · [ru-RU](#ru-ru) · [tr-TR](#tr-tr)

## 整體（兩專案合計）

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 450 | 23 | 95% |
| ru-RU | 473 | 0 | 100% |
| tr-TR | 473 | 0 | 100% |

## 專案: OmniConsole

字串數: 451

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 433 | 18 | 96% |
| ru-RU | 451 | 0 | 100% |
| tr-TR | 451 | 0 | 100% |

## 專案: OmniConsole.PhantomLink

字串數: 22

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 17 | 5 | 77% |
| ru-RU | 22 | 0 | 100% |
| tr-TR | 22 | 0 | 100% |

## 待翻譯的 key

### es-ES

**OmniConsole**

變動（需重譯） (18):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`

**OmniConsole.PhantomLink**

變動（需重譯） (5):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`

### ru-RU

_全部已翻譯。_

### tr-TR

_全部已翻譯。_
